# hydraulic

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  foo.txt
examples/: gzip.rs  read_read.rs
src/: algorithm_meta.rs  algorithms.rs  compression_level.rs  deflate.rs  gz.rs  lib.rs  main.rs
src/cli/: args.rs
src/errors/: compression_error.rs  decompression_error.rs  mod.rs
src/features/: deflate.rs  gz.rs  mod.rs  no_compression.rs
src/read/: compress.rs  decode.rs  decompress.rs  encode.rs  mod.rs  types.rs
src/tests/: mod.rs  util.rs  write_read_test.rs  write_write_test.rs
src/write/: compress.rs  decode.rs  decompress.rs  encode.rs  types.rs
