[package]
name = "hydraulic"
version = "0.1.0"
edition = "2021"
description = "An interface for generic compression library usage with a collection (unimplemented so far) of pre-existing compression libraries"
license = "GPL-3"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
clap-stdin = "0.5.1"
flate2 = "1.0.31"
inflate = "0.4.5"
miniz_oxide = "0.8.0"
rand = "0.8.5"

[lib]
name = "hydraulic"
path = "src/lib.rs"

[features]
full = []
gzip = []
deflate = []