[package]
name = "hydraulic"
version = "0.1.0"
edition = "2021"
description = "An interface for generic compression library usage with a collection (unimplemented so far) of pre-existing compression libraries"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5.16", optional = true, features = ["derive"] }
clap-stdin = { version = "0.5.1", optional = true}

[dev-dependencies]
rand = "0.8.5"

[lib]
name = "hydraulic"
path = "src/lib.rs"

[[bin]]
name = "hydraulic"
path = "src/main.rs"
required-features = ["build-binary"]



[features]
full = []
gzip = []
deflate = []
build-binary = ["clap", "clap-stdin"]