[package]
name = "hydraulic"
version = "0.1.0"
edition = "2021"
description = "An interface for generic compression library usage with a collection (unimplemented so far) of pre-existing compression libraries"
license = "GPL-3.0"

[dependencies]
flate2 = "1.0.33"
miniz_oxide = "0.8.0"

[dev-dependencies]
rand = "0.8.5"

[lib]
name = "hydraulic"
path = "src/lib.rs"

[features]
full = []
gzip = []
deflate = []
